update nama anggota

--- a/presentation/src/index.jade
+++ b/presentation/src/index.jade
@@ -14,7 +14,9 @@ html
       section
         h1 Welcome to 
         h1 Just Quiz
-
+      section
+      	h1 Martin Leonardi
+      	
       section#soal1(onmouseenter="sLoad(0)")
         div.board
           div.nomor 1.
