update nama anggota1

--- a/presentation/src/index.jade
+++ b/presentation/src/index.jade
@@ -16,7 +16,34 @@ html
         h1 Just Quiz
       section
       	h1 Martin Leonardi
-      	
+      	h1 NIM : 141111481
+        h1 trello id : worldrecord
+        h1 github id : worldrecord
+        h1 email: martinleonardi88@yahoo.com
+      section
+      	h1 Filbert
+      	h1 NIM : 141111171
+        h1 trello id : filbert5
+        h1 github id : filbert5
+        h1 email: ongfilbert@gmail.com
+        section
+      	h1 Hendra
+      	h1 NIM : 141110159
+        h1 trello id : hendra53
+        h1 github id : hendra53
+        h1 email: hendrahunter59@gmail.com
+        section
+      	h1 Erick Sunarli
+      	h1 NIM : 141112580
+        h1 trello id : ericksun
+        h1 github id : ericksun21
+        h1 email: ericksunarli@yahoo.com
+        section
+      	h1 Hendy
+      	NIM : 141110850
+        trello id : hendyto
+        github id : hendyto
+        email: henzblaze1@gmail.com
       section#soal1(onmouseenter="sLoad(0)")
         div.board
           div.nomor 1.
